pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: postgres-operator
  name: pgadmin-service
spec:
  type: ClusterIP
  ports:
  - name: pgadmin-port
    port: 5050
    protocol: TCP
  selector:
    postgres-operator.crunchydata.com/pgadmin: pgadmin
